# qt-ffconv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
assets/: ffconv.desktop  icon.qrc
src/: EncodeSettings.cpp  EncodeSettings.h  FfmpegProcess.cpp  FfmpegProcess.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  TranscodeJob.h  main.cpp
translations/: ffmpeg-qt6_en.ts  qt-ffconv_en.ts
